--- a/src/newLogin.css
+++ b/src/newLogin.css
@@ -57,7 +57,13 @@
 .login-right h1 {
   margin: 10px 50% 2% 10%;
   color: #ffed63;
-  font-size: 2.5rem; /* Adjust size as needed */
+  font-size: 2.5rem;
+}
+
+.resultMessage {
+  margin: 10px 50% 2% 10%;
+  color: #2bbddb;
+  font-size: 2 rem;
 }
 
 .login-button {
