--- a/src/employerJobPortal.css
+++ b/src/employerJobPortal.css
@@ -295,7 +295,7 @@ label {
 .userEmail {
   color: #ffed63;
   font-weight: bold;
-  margin-left: 80%;
+  margin-left: 90%;
 }
 
 .file-name {
@@ -307,4 +307,54 @@ label {
 
 .uploadResume {
   margin-right: 3rem;
+}
+
+.rank-container {
+  width: 90%;
+  flex-direction: column;
+  margin: 2rem 2rem 1rem 2rem;
+  min-height: 85vh;
+  padding: 1rem;
+  background: linear-gradient(to right, gray, rgba(0, 0, 0, 0));
+  font-family: sans-serif;
+  height: 100%;
+}
+
+.defaultMessage {
+  text-align: center;
+  color: #333;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+
+.rank-table {
+  width: 100%;
+  border-collapse: collapse;
+  table-layout: auto;
+}
+
+.rank-table th {
+  padding: 0.75rem;
+  /* border: 1px solid #ccc; */
+  text-align: left;
+  background-color: #776a06;
+  color: #ffed63;
+  font-weight: bold;
+}
+
+.rank-table td {
+  padding: 0.75rem;
+  /* border: 1px solid #ccc; */
+  text-align: left;
+  color: #333;
+  word-wrap: break-word;
+}
+
+.admin-job-description {
+  word-wrap: break-word;
+  background-color: #776a06;
+}
+
+.noJoblist {
+  color: #776a06;
 }
