few modificaiton in the file and new file addititon

--- a/src/employerJobPortal.css
+++ b/src/employerJobPortal.css
@@ -285,14 +285,16 @@ label {
 }
 
 .logout {
+  display: flex;
   color: #ffed63;
   text-decoration: underline;
   font-weight: bold;
-  margin-left: 100%;
+  margin-left: 90%;
   cursor: pointer;
 }
 
 .userEmail {
+  display: flex;
   color: #ffed63;
   font-weight: bold;
   margin-left: 90%;
@@ -351,10 +353,23 @@ label {
 }
 
 .admin-job-description {
+  text-align: left;
   word-wrap: break-word;
   background-color: #776a06;
 }
 
 .noJoblist {
   color: #776a06;
+}
+
+.gotoPreviousPage {
+  color: #ffed63;
+
+  font-weight: bold;
+  margin-right: 90%;
+  cursor: pointer;
+}
+
+.gotoPreviousPage:hover {
+  text-decoration: underline;
 }
